--- a/Resources/Prototypes/Engine/Entities/Doors.yml
+++ b/Resources/Prototypes/Engine/Entities/Doors.yml
@@ -13,6 +13,10 @@
 
   - type: BoundingBox
   - type: Collidable
+  
+  - type: Mesh
+    state: LockerBasicDoor
+    scene: base
 
   placement:
     snap:
