--- a/SS14.Client/SS14.Client.csproj
+++ b/SS14.Client/SS14.Client.csproj
@@ -164,8 +164,9 @@
     <Compile Include="Interfaces\Utility\IRand.cs" />
     <Compile Include="Log\DebugConsoleLogHandler.cs" />
     <Compile Include="Log\GodotLogHandler.cs" />
+    <Compile Include="Map\ClientMapManager3D.cs" />
     <Compile Include="Map\ClientTileDefinitionManager.cs" />
-    <Compile Include="Map\ClientMapManager.cs" />
+    <Compile Include="Map\ClientMapManager2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\ClientReflectionManager.cs" />
     <Compile Include="Interfaces\ResourceManagement\IResourceCache.cs" />
