Remove existing physics system, start replacing it with Aether.

--- a/Robust.Shared/Robust.Shared.csproj
+++ b/Robust.Shared/Robust.Shared.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Lidgren.Network\Lidgren.Network.csproj" />
     <ProjectReference Include="..\Robust.Shared.Maths\Robust.Shared.Maths.csproj" />
+    <ProjectReference Include="..\Robust.Shared.Physics\Robust.Shared.Physics.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Robust.Shared.dll.config">
